<resources>
    <string name="app_name">瞬记</string>
    <string name="navigation_drawer_open">打开导航栏</string>
    <string name="navigation_drawer_close">关闭导航栏</string>
    <string name="nav_header_title">尚博</string>
    <string name="nav_header_subtitle">资金状态</string>
    <string name="nav_header_desc">个人信息</string>
    <string name="action_settings">设置</string>

    <string name="menu_account">资产账户</string>
    <string name="menu_bills">账单明细</string>
    <string name="menu_analysis">统计分析</string>
    <string name="menu_category">统计分类</string>
    <string name="menu_settings">系统设置</string>

    <string name="menu_cash_account">资金账户</string>
    <string name="menu_credit_account">信用账户</string>
    <string name="menu_invest_account">投资账户</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
