<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_bills"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_bills" />
        <item
            android:id="@+id/nav_analysis"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_analysis" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_category" />
    </group>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/menu_settings" />

</menu>
