<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_account">

    <fragment
        android:id="@+id/nav_account"
        android:name="com.loftysoul.soulcost.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/account_fragment" />

    <fragment
        android:id="@+id/nav_bills"
        android:name="com.loftysoul.soulcost.ui.bills.BillsFragment"
        android:label="@string/menu_bills"
        tools:layout="@layout/bills_fragment" />

    <fragment
        android:id="@+id/nav_analysis"
        android:name="com.loftysoul.soulcost.ui.analysis.AnalysisFragment"
        android:label="@string/menu_analysis"
        tools:layout="@layout/analysis_fragment" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.loftysoul.soulcost.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/category_fragment" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.loftysoul.soulcost.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/settings_fragment" />

</navigation>